fix(swagger): fix swagger additional info
