# routers/router.go
@@ -1,10 +1,14 @@
 // @APIVersion 1.0.0
-// @Title beego Test API
-// @Description beego has a very cool tools to autogenerate documents for your API
-// @Contact astaxie@gmail.com
+// @Title Go Car Rental API
+// @Description Static autogenerated API for Go Car Rental using Beego Swagger
+// @Contact wojciech.bernatek@gmail.com
 // @TermsOfServiceUrl http://beego.me/
 // @License Apache 2.0
 // @LicenseUrl http://www.apache.org/licenses/LICENSE-2.0.html
+// @Name Go Car Rental
+// @URL http://localhost:8080/
+// @Host localhost:8080
+// @Schemes HTTP, HTTPS
 package routers
 
 import (
