# swagger/swagger.json
@@ -1,19 +1,26 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "beego Test API",
-        "description": "beego has a very cool tools to autogenerate documents for your API\n",
+        "title": "Go Car Rental API",
+        "description": "Static autogenerated API for Go Car Rental using Beego Swagger\n",
         "version": "1.0.0",
         "termsOfService": "http://beego.me/",
         "contact": {
-            "email": "astaxie@gmail.com"
+            "name": "Go Car Rental",
+            "url": "http://localhost:8080/",
+            "email": "wojciech.bernatek@gmail.com"
         },
         "license": {
             "name": "Apache 2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         }
     },
+    "host": "localhost:8080",
     "basePath": "/v1",
+    "schemes": [
+        "HTTP",
+        " HTTPS"
+    ],
     "paths": {
         "/user/": {
             "get": {
